--- a/index.html
+++ b/index.html
@@ -40,10 +40,18 @@
         <!-- Контакты -->
         <ul class="contact-nav list">
           <li class="contact-nav item">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contact-mail" href="mailto:info@devstudio.com">
+              <svg class="icon-mail" width="16" height="12">
+                <use href="./images/sprite.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="contact-nav item">
-            <a href="tel:+380961111111">+380961111111</a>
+            <a class="contact-phone" href="tel:+380961111111">
+              <svg class="icon-phone" width="10" height="16">
+                <use href="./images/sprite.svg#icon-smartphone"></use>
+              </svg>+380961111111</a>
           </li>
         </ul>
       </div>
@@ -63,6 +71,9 @@
         <div class="container">
           <ul class="features-list">
             <li class="features-list-item">
+              <svg class="icon-features" width="270" height="120">
+                <use href="./images/sprite.svg#icon-antenna"></use>
+              </svg>
               <h3 class="features-title">Внимание к деталям</h3>
               <p class="features-text">
                 Идейные соображения, а также начало повседневной работы по
@@ -70,6 +81,9 @@
               </p>
             </li>
             <li class="features-list-item">
+              <svg class="icon-features" width="270" height="120">
+                <use href="./images/sprite.svg#icon-clock"></use>
+              </svg>
               <h3 class="features-title">Пунктуальность</h3>
               <p class="features-text">
                 Задача организации, в особенности же рамки и место обучения
@@ -77,6 +91,9 @@
               </p>
             </li>
             <li class="features-list-item">
+              <svg class="icon-features" width="270" height="120">
+                <use href="./images/sprite.svg#icon-diagram"></use>
+              </svg>
               <h3 class="features-title">Планирование</h3>
               <p class="features-text">
                 Равным образом консультация с широким активом в значительной
@@ -84,6 +101,9 @@
               </p>
             </li>
             <li class="features-list-item">
+              <svg class="icon-features" width="270" height="120">
+                <use href="./images/sprite.svg#icon-astronaut"></use>
+              </svg>
               <h3 class="features-title">Современные технологии</h3>
               <p class="features-text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -141,6 +161,28 @@
               <div class="team-border">
                 <h3 class="team-title-name">Игорь Демьяненко</h3>
                 <p class="team-discription">Product Designer</p>
+                <ul class="list social-list">
+                  <li><button class="team-button" type="button">
+                    <svg class="team-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a></li>
+                  <li><button class="team-button" type="button">
+                    <svg class="team-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a></li>
+                  <li><button class="team-button" type="button">
+                    <svg class="team-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a></li>
+                  <li><button class="team-button" type="button">
+                    <svg class="team-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a></li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -153,6 +195,28 @@
               <div class="team-border">
                 <h3 class="team-title-name">Ольга Репина</h3>
                 <p class="team-discription">Frontend Developer</p>
+                <ul class="list social-list">
+                  <li><button class="team-button" type="button">
+                    <svg class="team-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a></li>
+                  <li><button class="team-button" type="button">
+                    <svg class="team-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a></li>
+                  <li><button class="team-button" type="button">
+                    <svg class="team-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a></li>
+                  <li><button class="team-button" type="button">
+                    <svg class="team-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a></li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -165,6 +229,28 @@
               <div class="team-border">
                 <h3 class="team-title-name">Николай Тарасов</h3>
                 <p class="team-discription">Marketing</p>
+                <ul class="list social-list">
+                  <li><button class="team-button" type="button">
+                    <svg class="team-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a></li>
+                  <li><button class="team-button" type="button">
+                    <svg class="team-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a></li>
+                  <li><button class="team-button" type="button">
+                    <svg class="team-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a></li>
+                  <li><button class="team-button" type="button">
+                    <svg class="team-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a></li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -177,37 +263,138 @@
               <div class="team-border">
                 <h3 class="team-title-name">Михаил Ермаков</h3>
                 <p class="team-discription">UI Designer</p>
+                <ul class="list social-list">
+                  <li><button class="team-button" type="button">
+                    <svg class="team-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a></li>
+                  <li><button class="team-button" type="button">
+                    <svg class="team-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a></li>
+                  <li><button class="team-button" type="button">
+                    <svg class="team-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a></li>
+                  <li><button class="team-button" type="button">
+                    <svg class="team-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a></li>
+                </ul>                
               </div>
             </li>
+          </ul>
+        </div>
+      </section>
+      <!-- Клиенты -->
+      <section class="clients">
+        <div class="container">
+          <h2 class="clients-title">Постоянные клиенты</h2>
+          <ul class="list clients-list">
+            <li class="clients-item">
+              <a href="">
+                <svg width="106" height="60" class="clients-icon">
+                  <use href="./images/sprite.svg#icon-logo"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-link" href="">
+                <svg width="106" height="60" class="clients-icon">
+                  <use href="./images/sprite.svg#icon-logo2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-link" href="">
+                <svg width="106" height="60" class="clients-icon">
+                  <use href="./images/sprite.svg#icon-logo3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-link" href="">
+                <svg width="106" height="60" class="clients-icon">
+                  <use href="./images/sprite.svg#icon-logo4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-link" href="">
+                <svg width="106" height="60" class="clients-icon">
+                  <use href="./images/sprite.svg#icon-logo5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-link" href="">
+              <svg width="106" height="60" class="clients-icon">
+                <use href="./images/sprite.svg#icon-logo6"></use>
+              </svg>
+            </a></li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="footer">
       <div class="container">
-        <!-- Футер -->
-        <a href="./index.html" class="logo primary footer-logo"
-          >Web<span class="logo footer footer-logo">Studio</span></a
-        >
-        <address>
-          <ul class="address list">
-            <li class="footer-link">
-              <a
-                target="_blank"
-                rel="noopener noreferrer"
-                href="https://goo.gl/maps/xk3SuX6XyrTpY8Za6"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
-            </li>
-            <li class="footer-item">
-              <a href="mailto:info@example.com">info@example.com</a>
-            </li>
-            <li class="footer-item">
-              <a href="tel:+380991111111">+380991111111</a>
-            </li>
-          </ul>
-        </address>
-      </div>
+        <!-- Футер -->        
+        <ul class="footer-list list">
+          <li class="footer-main-item">
+            <a href="./index.html" class="logo primary footer-logo"
+            >Web<span class="logo footer footer-logo">Studio</span></a
+          >
+          <address>
+            <ul class="address list">
+              <li class="footer-link">
+                <a
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="https://goo.gl/maps/xk3SuX6XyrTpY8Za6"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="footer-item">
+                <a href="mailto:info@example.com">info@example.com</a>
+              </li>
+              <li class="footer-item">
+                <a href="tel:+380991111111">+380991111111</a>
+              </li>
+            </ul>
+          </address> 
+          </li>
+          <li class="footer-main-item">
+            <h2>Присоединяйтесь</h2>
+            <ul class="list social-list">
+              <li><button class="footer-button" type="button">
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a></li>
+              <li><button class="footer-button" type="button">
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a></li>
+              <li><button class="footer-button" type="button">
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a></li>
+              <li><button class="footer-button" type="button">
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a></li>
+            </ul>  
+          </li>
+        </ul>
+     
+      </div>      
     </footer>
   </body>
 </html>
