--- a/portfolio.html
+++ b/portfolio.html
@@ -40,10 +40,18 @@
         <!-- Контакты -->
         <ul class="contact-nav list">
           <li class="contact-nav item">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contact-mail" href="mailto:info@devstudio.com">
+              <svg class="icon-mail" width="16" height="12">
+                <use href="./images/sprite.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="contact-nav item">
-            <a href="tel:+380961111111">+380961111111</a>
+            <a class="contact-phone" href="tel:+380961111111">
+              <svg class="icon-phone" width="10" height="16">
+                <use href="./images/sprite.svg#icon-smartphone"></use>
+              </svg>+380961111111</a>
           </li>
         </ul>
       </div>
@@ -193,29 +201,59 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <!-- Футер -->
-        <a href="./index.html" class="logo primary footer-logo"
-          >Web<span class="logo footer footer-logo">Studio</span></a
-        >
-        <address>
-          <ul class="address list">
-            <li class="footer-link">
-              <a
-                target="_blank"
-                rel="noopener noreferrer"
-                href="https://goo.gl/maps/xk3SuX6XyrTpY8Za6"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
-            </li>
-            <li class="footer-item">
-              <a href="mailto:info@example.com">info@example.com</a>
-            </li>
-            <li class="footer-item">
-              <a href="tel:+380991111111">+380991111111</a>
-            </li>
-          </ul>
-        </address>
-      </div>
+        <!-- Футер -->        
+        <ul class="footer-list list">
+          <li class="footer-main-item">
+            <a href="./index.html" class="logo primary footer-logo"
+            >Web<span class="logo footer footer-logo">Studio</span></a
+          >
+          <address>
+            <ul class="address list">
+              <li class="footer-link">
+                <a
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="https://goo.gl/maps/xk3SuX6XyrTpY8Za6"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="footer-item">
+                <a href="mailto:info@example.com">info@example.com</a>
+              </li>
+              <li class="footer-item">
+                <a href="tel:+380991111111">+380991111111</a>
+              </li>
+            </ul>
+          </address> 
+          </li>
+          <li class="footer-main-item">
+            <h2>Присоединяйтесь</h2>
+            <ul class="list social-list">
+              <li><button class="footer-button" type="button">
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a></li>
+              <li><button class="footer-button" type="button">
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a></li>
+              <li><button class="footer-button" type="button">
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a></li>
+              <li><button class="footer-button" type="button">
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a></li>
+            </ul>  
+          </li>
+        </ul>
+     
+      </div>      
     </footer>
   </body>
 </html>
