--- a/index.html
+++ b/index.html
@@ -68,22 +68,28 @@
       </section>
       <!-- Преимущества -->
       <section class="features">
-        <div class="container">
+        <div class="container">          
           <ul class="features-list">
+            
             <li class="features-list-item">
-              <svg class="icon-features" width="270" height="120">
+              <div class="features-fig">
+              <svg class="icon-features" width="70" height="70">
                 <use href="./images/sprite.svg#icon-antenna"></use>
               </svg>
+              </div>
               <h3 class="features-title">Внимание к деталям</h3>
               <p class="features-text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
+           
             <li class="features-list-item">
-              <svg class="icon-features" width="270" height="120">
+              <div class="features-fig">
+              <svg class="icon-features" width="70" height="70">              
                 <use href="./images/sprite.svg#icon-clock"></use>
               </svg>
+              </div>
               <h3 class="features-title">Пунктуальность</h3>
               <p class="features-text">
                 Задача организации, в особенности же рамки и место обучения
@@ -91,9 +97,11 @@
               </p>
             </li>
             <li class="features-list-item">
-              <svg class="icon-features" width="270" height="120">
+              <div class="features-fig">
+              <svg class="icon-features" width="70" height="70">              
                 <use href="./images/sprite.svg#icon-diagram"></use>
               </svg>
+              </div>
               <h3 class="features-title">Планирование</h3>
               <p class="features-text">
                 Равным образом консультация с широким активом в значительной
@@ -101,9 +109,11 @@
               </p>
             </li>
             <li class="features-list-item">
-              <svg class="icon-features" width="270" height="120">
+              <div class="features-fig">
+              <svg class="icon-features" width="70" height="70">              
                 <use href="./images/sprite.svg#icon-astronaut"></use>
               </svg>
+              </div>
               <h3 class="features-title">Современные технологии</h3>
               <p class="features-text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -296,42 +306,42 @@
           <h2 class="clients-title">Постоянные клиенты</h2>
           <ul class="list clients-list">
             <li class="clients-item">
-              <a href="">
+              <a href="/">
                 <svg width="106" height="60" class="clients-icon">
                   <use href="./images/sprite.svg#icon-logo"></use>
-                </svg>
+                </svg>              
               </a>
             </li>
             <li class="clients-item">
-              <a class="clients-link" href="">
+              <a href="/">
                 <svg width="106" height="60" class="clients-icon">
                   <use href="./images/sprite.svg#icon-logo2"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
-              <a class="clients-link" href="">
+              <a href="/">
                 <svg width="106" height="60" class="clients-icon">
                   <use href="./images/sprite.svg#icon-logo3"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
-              <a class="clients-link" href="">
+              <a href="/">
                 <svg width="106" height="60" class="clients-icon">
                   <use href="./images/sprite.svg#icon-logo4"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
-              <a class="clients-link" href="">
+              <a href="/">
                 <svg width="106" height="60" class="clients-icon">
                   <use href="./images/sprite.svg#icon-logo5"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
-              <a class="clients-link" href="">
+              <a href="/">
               <svg width="106" height="60" class="clients-icon">
                 <use href="./images/sprite.svg#icon-logo6"></use>
               </svg>
